<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/button_connect"
            android:layout_width="130dp"

            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_orange"
            android:elevation="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/connect"
            app:initialCornerAngle="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:spinning_bar_color="@color/colorPrimary" />

        <TextView
            android:id="@+id/edittext_ipaddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/ip_address"
            android:singleLine="true"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_connect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/fragment_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/pager_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TabLayout
                android:id="@+id/tablayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TabItem
                    android:id="@+id/tab_sequencer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sequencer" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tab_intervalometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intervalometer" />

            </android.support.design.widget.TabLayout>

            <view
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                class="com.hixos.cameracontroller.WrapContentHeightViewPager"/>
            </LinearLayout>
        <fragment
            android:id="@+id/fragment"
            android:name="com.hixos.cameracontroller.LogFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/fragment_log" />

    </LinearLayout>
</LinearLayout>